Synced by Front Matter

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -8,9 +8,9 @@
             {{- .Title -}}
         </h1>
 
-        {{- /* Subtitle */ -}}
-        {{- with $params.subtitle -}}
-            <h2 class="single-subtitle">{{ . }}</h2>
+        {{- /* Summery */ -}}
+        {{- with $params.summery -}}
+            <h2 class="single-summery">{{ . }}</h2>
         {{- end -}}
 
         {{- /* Content */ -}}
