--- a/layouts/partials/head/meta.html
+++ b/layouts/partials/head/meta.html
@@ -1,6 +1,6 @@
 {{- $params := .Scratch.Get "params" -}}
 
-<meta name="Description" content="{{ $params.description | default .Site.Params.description }}">
+<meta name="Summery" content="{{ $params.summery | default .Site.Params.sescription }}">
 
 {{- template "_internal/opengraph.html" . -}}
 {{- template "_internal/twitter_cards.html" . -}}
